estructuraBlades22: mejoras sidebar v2 -> estilos scroller sidebar

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -7,3 +7,37 @@
 .test {
     background-color: red;
 }
+
+
+
+/*----- Sidebar scroller -----*/
+
+.scroller {
+    --scrollbar-color-thumb: #9d9d9d;
+    --scrollbar-color-track: #dfdfdf;
+    --scrollbar-width: thin;
+    --scrollbar-width-legacy: 10px;
+}
+
+/* Modern browsers with `scrollbar-*` support */
+@supports (scrollbar-width: auto) {
+    .scroller {
+        /*scrollbar-color: var(--scrollbar-color-thumb) var(--scrollbar-color-track);*/
+        scrollbar-width: var(--scrollbar-width);
+    }
+}
+
+/* Legacy browsers with `::-webkit-scrollbar-*` support */
+@supports selector(::-webkit-scrollbar) {
+    .scroller::-webkit-scrollbar-thumb {
+        background: var(--scrollbar-color-thumb);
+        border-radius: 5px;
+    }
+    .scroller::-webkit-scrollbar-track {
+        background: var(--scrollbar-color-track);
+    }
+    .scroller::-webkit-scrollbar {
+        max-width: var(--scrollbar-width-legacy);
+        /*max-height: var(--scrollbar-width-legacy);*/
+    }
+}
