--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,6 @@
+/*----- laravel-ts-utilities css -----*/
+@import 'laravel-ts-utilities/dist/app/style.css';
+
 /*----- Tailwind css -----*/
 @tailwind base;
 @tailwind components;
@@ -6,38 +9,4 @@
 /*----- App css -----*/
 .test {
     background-color: red;
-}
-
-
-
-/*----- Sidebar scroller -----*/
-
-.scroller {
-    --scrollbar-color-thumb: #9d9d9d; /*#9d9d9d*/
-    --scrollbar-color-track: transparent; /*#dfdfdf*/
-    --scrollbar-width: thin;
-    --scrollbar-width-legacy: 5px;
-}
-
-/* Modern browsers with `scrollbar-*` support */
-@supports (scrollbar-width: auto) {
-    .scroller {
-        scrollbar-color: var(--scrollbar-color-thumb) var(--scrollbar-color-track);
-        scrollbar-width: var(--scrollbar-width);
-    }
-}
-
-/* Legacy browsers with `::-webkit-scrollbar-*` support */
-@supports selector(::-webkit-scrollbar) {
-    .scroller::-webkit-scrollbar-thumb {
-        background: var(--scrollbar-color-thumb);
-        border-radius: 5px;
-    }
-    .scroller::-webkit-scrollbar-track {
-        background: var(--scrollbar-color-track);
-    }
-    .scroller::-webkit-scrollbar {
-        max-width: var(--scrollbar-width-legacy);
-        /*max-height: var(--scrollbar-width-legacy);*/
-    }
 }
